# dect

./: .gitignore  CMakeLists.txt  LICENSE  dect.sln
dect/: CMakeLists.txt  cpu.cpp  dect.cl  dect.vcxproj  dect.vcxproj.filters  main.cpp  opencl.cpp  simul.cpp
libdect/: CMakeLists.txt  config.h.in  cpu.cpp  cpu_template.cpp  cpud16.cpp  cpud8.cpp  cpudf32.cpp  cpudf64.cpp  cpuf.cpp  cpuf16.cpp  cpuf8.cpp  cpuff32.cpp  cpuff64.cpp  dect.cl  git.version.h.in  libdect.cpp  libdect.h  libdect.vcxproj  libdect.vcxproj.filters  opencl.cpp  simul.cpp
slicer/: CMakeLists.txt
slicer/DectExplorer/: CMakeLists.txt  DectExplorer.py
slicer/slicerdect/: CMakeLists.txt  slicerdect.py
